修正耗电量计算

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-  "room_name": "516",
-  "room_id": "6502",
+  "room_name": "",
+  "room_id": "",
   "client": "192.168.84.1",
   "interval_day": 14,
   "remind_daily": true,
